mengubah lesson-wrapper & message-wrapper

--- a/index.html
+++ b/index.html
@@ -38,36 +38,36 @@
     <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Cari tau dari mana anda mau memulai!</h2>
+          <h2>Cari tau produk pilihan anda</h2>
         </div>
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/html.png">
-               <p>HTML & CSS</p>
+              <img src="flash-sale.png">
+               <p>Flash Sale</p>
             </div>
-             <p class="text-contents">Bahasa yang digunakan untuk membuat dan mendesain tampilan situs web Anda. </p>
+             <p class="text-contents">Pilih Produk Flash Sale Pilihan Anda </p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-              <p>jQuery</p>
+              <img src="smartphone.png">
+              <p>Pulsa dan Tagihan</p>
             </div>
-            <p class="text-contents">Library JavaScript yang cepat, kaya akan fitur, dan mudah digunakan yang menangani animasi dan permintaan Ajax.</p>
+            <p class="text-contents">Isi Pulsa dan Tagihan anda Disini.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/ruby.png">
-              <p>Ruby</p>
+              <img src="ticket-flight.png">
+              <p>Tiket Pesawat</p>
             </div>
-            <p class="text-contents">Bahasa dinamis, serba guna yang sederhana dan produktif. Ruby sering digunakan untuk membuat aplikasi web yang responsive.</p>
+            <p class="text-contents">Pesan Tiket Pesawat Mudah Disini</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/php.png">
-              <p>PHP</p>
+              <img src="purse.png">
+              <p>TopUp E-Money</p>
             </div>
-            <p class="text-contents">Bahasa skrip open source yang dapat disematkan ke dalam HTML, dan cocok untuk pengembangan web.</p>
+            <p class="text-contents">TopUp Berbagai Pilihan E-Money Disini</p>
           </div>
           <div class="clear"></div>
         </div>
@@ -76,10 +76,10 @@
     <div class="message-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Apakah anda siap untuk menjadi programer yang handal?</h2>
-          <h3>Ayo belajar coding, ayo belajar menjadi lebih kreatif!</h3>
+          <h2>Cari produk yang dijamin kualitasnya? Kunjungi toko kami!</h2>
+          <h3>Dapatkan GRATIS ongkos kirim hanya dengan belanja di toko kami!</h3>
         </div>
-        <span class="btn message">Mulai Belajar</span>
+        <span class="btn message">Mulai Belanja</span>
       </div>
     </div>
     <footer>
