--- a/index.html
+++ b/index.html
@@ -83,9 +83,39 @@
       </div>
     </div>
     <footer>
-      <div class="container">
-        <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-        <p>Learn to code, learn to be creative.</p>
+      <div class="coloor">
+        <div class="container">
+          <div class="footer">
+            <div class="rfooter">
+              <h4>LAYANAN PELANGGAN</h4>
+              <p><a href="#">Bantuan</a></p>
+              <p><a href="#">Garansi</a></p>
+              <p><a href="#">Tracking</a></p>
+            </div>
+            <div class="rfooter">
+              <h4> JELAJAHI EEPOHS </h4>
+              <p><a href="#">Pembayaran</a></p>
+              <p><a href="#">Affiliate Program</a></p>
+              <p><a href="#">Term & Conditions</a></p>
+            </div>
+            <div class="rfooter">
+              <h4> FOLLOW US </h4>
+              <p><a href="#">Instagram</a></p>
+              <p><a href="#">Facebook</a></p>
+              <p><a href="#">Twitter</a></p>
+              <p><a href="#">LinkedIn</a></p>
+            </div>
+            </div>
+          </div>
+        <div class="container">
+          <div class="row">
+            <div style="float:left">&copy;2021 All Right Reserved by <a href="#">EEPOHS</a>
+            </div>
+            <div style="float:right">
+              <img class="logo" src="Eepohs Logo.png">
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
